<resources>
    <string name="app_name">HALANX</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot">Forgot Password</string>
    <string name="text">New Here! SIGN UP</string>
    <string name="sign_up">SIGN UP</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="ph_no">Phone No.</string>
    <string name="title_activity_home">Home</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="caption">Rs X more for FREE DELIVERY</string>
    <string name="payment">Add to CART</string>
    <string name="action">Tap the Circle to Accept</string>
    <string name="sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
