<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.halanx.tript.userapp.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/ll1">

        <EditText
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text1"
            android:id="@+id/edit_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email_id"
            android:textColorHint="#fff"
            android:inputType="text"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text1"
            android:id="@+id/edit_text2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="#fff"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"/>

        <Button

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_style_selector"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="20dp"
            android:id="@+id/button"/>

        <com.google.android.gms.common.SignInButton

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="20dp"
            android:id="@+id/GoogleButton"/>

        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="#fff"
            android:id="@+id/button2"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up"
        android:text="@string/text"
        android:layout_below="@+id/ll1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vibrate"
        android:text="Vibrate Page"
        android:layout_below="@+id/sign_up"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PopUp"
        android:text="CallPopUP"
        android:layout_below="@+id/vibrate"/>

</RelativeLayout>
