<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.halanx.tript.userapp.signup">

    <TextView
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:id="@+id/firstname"
        android:text="@string/firstname"
        android:layout_alignParentLeft="true"
        android:gravity="fill_vertical"
        android:layout_toLeftOf="@+id/first_name1"
        android:layout_alignBottom="@+id/first_name1"
        android:layout_alignParentTop="true"
        tools:textSize="18sp" />
    <EditText
        android:layout_width="175dp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:hint="@string/firstname"
        android:id="@+id/first_name1"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:id="@+id/lastname"
        android:text="@string/lastname"
        android:layout_alignParentLeft="true"
        android:gravity="fill_vertical"
        android:layout_toLeftOf="@+id/last_name1"
        android:layout_below="@+id/firstname"
        tools:textSize="18sp"
        android:layout_alignBottom="@+id/last_name1" />
    <EditText
        android:layout_width="175dp"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:hint="@string/lastname"
        android:id="@+id/last_name1"
        android:layout_below="@+id/first_name1"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:id="@+id/email_id"
        android:text="@string/email_id"
        android:layout_alignParentLeft="true"
        android:gravity="fill_vertical"
        android:layout_toLeftOf="@+id/email_id1"
        android:layout_below="@+id/lastname"
        tools:textSize="18sp"
        />
    <EditText
        android:layout_width="175dp"
        android:layout_height="40sp"
        android:hint="@string/email_id"
        android:id="@+id/email_id1"
        android:layout_below="@+id/last_name1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:id="@+id/password"
        android:text="@string/password"
        android:layout_alignParentLeft="true"
        android:gravity="fill_vertical"
        android:layout_toLeftOf="@+id/email_id1"
        android:layout_below="@+id/email_id"
        tools:textSize="18sp"
        />
    <EditText
        android:layout_width="175dp"
        android:layout_height="40sp"
        android:hint="@string/password"
        android:id="@+id/password1"
        android:layout_below="@+id/email_id1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:id="@+id/ph_no"
        android:text="@string/ph_no"
        android:layout_alignParentLeft="true"
        android:gravity="fill_vertical"
        android:layout_toLeftOf="@+id/ph_no1"
        android:layout_below="@+id/password"
        tools:textSize="18sp"
        />
    <EditText
        android:layout_width="175dp"
        android:layout_height="40sp"
        android:hint="@string/ph_no"
        android:id="@+id/ph_no1"
        android:layout_below="@+id/password1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="FINISH"
        android:id="@+id/finish"
        android:layout_below="@id/ph_no1"/>
</RelativeLayout>
