<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.halanx.tript.userapp.Item">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_above="@+id/exclaimation">

<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic_menu_gallery"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider"
        android:text="|"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_name"
        android:text="@string/item_name"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:paddingRight="5dp"
        android:layout_toStartOf="@+id/divider"
        android:layout_toLeftOf="@+id/divider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_price"
        android:text="@string/item_price"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:paddingLeft="5dp"
        android:layout_toEndOf="@+id/divider"
        android:layout_toRightOf="@+id/divider"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/decrement"
        android:layout_alignBaseline="@+id/quantity"
        android:layout_alignBottom="@+id/quantity"
        android:layout_toLeftOf="@+id/item_name"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />
    <EditText
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:hint="Quantity"
        android:layout_below="@+id/item_name"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/decrement"
        android:layout_toRightOf="@id/decrement"
        android:gravity="center_horizontal"
        android:id="@+id/quantity"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/increment"
        android:layout_below="@+id/item_price"
        android:layout_toEndOf="@+id/quantity"
        android:layout_toRightOf="@+id/quantity"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="__________________________________________________"
        android:layout_below="@+id/payment"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="Related Items"
        android:layout_below="@+id/payment"
        android:layout_marginTop="30sp"
        android:id="@+id/related_items"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/payment"
        android:text="@string/payment"
        android:layout_below="@+id/quantity"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
</ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:background="@color/colorPrimary"
        android:textSize="18sp"
        android:id="@+id/exclaimation"/>
</RelativeLayout>